--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
-     <link rel="stylesheet" href="fontawsome/css/fontawesome.min.css">
+     <link rel="stylesheet" href="./fontawsome/css/fontawesome.min.css">
     
-    <script src="fontawsome/js/all.min.js"></script>
+    <script src="./fontawsome/js/all.min.js"></script>
 
     <link rel="stylesheet" href="media.css">
     <style>
