--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
      <nav id="navs"
-    class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3 fixed-top top-0" style="z-index: 2000;" >
+    class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-5 fixed-top top-0" style="z-index: 2000;" >
 
     <div id="menu-item" class="container-fluid">
 
@@ -124,7 +124,7 @@
         <div class="row">hi</div> -->
     <!-- </div> -->
 <!-- Auto layout column -->
-<div id="maindiv" class="container-fluid shadow rounded-3">
+<div id="maindiv" class="container-fluid shadow rounded-3 mt-5">
 
     <div class="row shadow rounded">
                 <div class="col-sm-12 col-md-6">
