--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-     <nav id="navs"
+    
+    <nav id="navs"
     class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-5 fixed-top top-0" style="z-index: 2000;" >
 
     <div id="menu-item" class="container-fluid">
@@ -168,7 +169,7 @@
 </div>
 
 
-<div class="container bg-light ">
+<!-- <div class="container bg-light ">
     <div class="row"><h2 class="text-success"><i>Today's Special...</i></h2></div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-5">
         <div class="col my-2">
@@ -334,6 +335,181 @@
     </div>
 </div>
 
+ -->
+ <div class="container bg-light pt-3">
+ <div class="row">
+            <h2 class="text-success"><i>Today's Special...</i></h2>
+</div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-5">
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="../FoodCART/img/chken65.jpg" class="img-fluid mb-3 rounded"
+                        style="width: 220px; height: 200px; object-fit: cover;">
+                    <h2 class="text-primary">Chiken 65</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="../FoodCART/img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">Burger King</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="../FoodCART/img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">Green Salad</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">SandWich</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">Panner Stick</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+<div class="row">
+            <h2 class="text-dark"><i>Upcoming's Special...</i></h2>
+        </div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-4">
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/Biriyani.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2><i class="text-primary"> Biriyani</i></h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/pannerSalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">Panner Salad</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/ChikenLeg.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">ChikenLeg</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-2">
+                <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                    <img src="FoodCART/img/FriedGobi.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <h2 class="text-primary">FriedGobi</h2>
+                    <div class="d-flex gap-2">
+                        <span class="badge bg-danger">65% off</span>
+                        <span class="badge bg-success">Buy now</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-1">
+                <div class="bg-white p-2 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                     <img src="FoodCART/img/ChikenStick.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">Chiken Stick</h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+                </div>
+              
+            </div>
+    </div>
+
+
+    <div class="row">
+        <h2><i>Weekly Special...</i></h2>
+    </div>
+
+ <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-4">
+        <div class="col my-2">
+            <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                <img src="../FoodCART/img/chken65.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">Chiken <i> 65</i></h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+            </div>
+        </div>
+<div class="col my-2">
+            <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                <img src="../FoodCART/img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">Burger King</h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+            </div>
+        </div>
+        <div class="col my-2">
+            <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                <img src="../FoodCART/img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">Green Salad</h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+            </div>
+        </div>
+        <div class="col my-2">
+            <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                <img src="FoodCART/img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">SandWich</h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+            </div>
+        </div>
+        <div class="col my-2">
+            <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
+                <img src="FoodCART/img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
+                <h2 class="text-primary">Panner Stick</h2>
+                <div class="d-flex gap-2">
+                    <span class="badge bg-danger">65% off</span>
+                    <span class="badge bg-success">Buy now</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    </div>
 
 
 <footer class="border-top" style="background-color: #0d243d; color: #ccc; padding: 1em 0; width: 100%;">
