--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-5">
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="../FoodCART/img/chken65.jpg" class="img-fluid mb-3 rounded"
+                    <img src="./img/chken65.jpg" class="img-fluid mb-3 rounded"
                         style="width: 220px; height: 200px; object-fit: cover;">
                     <h2 class="text-primary">Chiken 65</h2>
                     <div class="d-flex gap-2">
@@ -355,7 +355,7 @@
 
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="../FoodCART/img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">Burger King</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -365,7 +365,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="../FoodCART/img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">Green Salad</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -375,7 +375,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">SandWich</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -385,7 +385,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">Panner Stick</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -400,7 +400,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-4">
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/Biriyani.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/Biriyani.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2><i class="text-primary"> Biriyani</i></h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -410,7 +410,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/pannerSalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/pannerSalad.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">Panner Salad</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -420,7 +420,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/ChikenLeg.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/ChikenLeg.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">ChikenLeg</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -430,7 +430,7 @@
             </div>
             <div class="col my-2">
                 <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                    <img src="FoodCART/img/FriedGobi.jpg" class="img-fluid mb-3 rounded imageFit">
+                    <img src="./img/FriedGobi.jpg" class="img-fluid mb-3 rounded imageFit">
                     <h2 class="text-primary">FriedGobi</h2>
                     <div class="d-flex gap-2">
                         <span class="badge bg-danger">65% off</span>
@@ -440,7 +440,7 @@
             </div>
             <div class="col my-1">
                 <div class="bg-white p-2 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                     <img src="FoodCART/img/ChikenStick.jpg" class="img-fluid mb-3 rounded imageFit">
+                     <img src="./img/ChikenStick.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Chiken Stick</h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
@@ -459,7 +459,7 @@
  <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-4">
         <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="../FoodCART/img/chken65.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="../img/chken65.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Chiken <i> 65</i></h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
@@ -469,7 +469,7 @@
         </div>
 <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="../FoodCART/img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="./img/burger.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Burger King</h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
@@ -479,7 +479,7 @@
         </div>
         <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="../FoodCART/img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="./img/greensalad.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Green Salad</h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
@@ -489,7 +489,7 @@
         </div>
         <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="FoodCART/img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="./img/sandwich-2977251_1280.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">SandWich</h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
@@ -499,7 +499,7 @@
         </div>
         <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="FoodCART/img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="./img/panner_stick.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Panner Stick</h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
