--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
  <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 gy-4 py-4">
         <div class="col my-2">
             <div class="bg-white p-3 rounded shadow-sm h-100 d-flex flex-column align-items-center">
-                <img src="../img/chken65.jpg" class="img-fluid mb-3 rounded imageFit">
+                <img src="./img/chken65.jpg" class="img-fluid mb-3 rounded imageFit">
                 <h2 class="text-primary">Chiken <i> 65</i></h2>
                 <div class="d-flex gap-2">
                     <span class="badge bg-danger">65% off</span>
