--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="content-wrapper">
                             <div class="welcome-tag">
                                 <i class="fas fa-sparkles me-2"></i>
-                                Welcome to Flavor Town
+                                Welcome to SpicyChilly
                             </div>
                             
                             <h1 class="main-heading">
