--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 </nav>
 
-<div class="container my-5">
+<div id="landing" class="container  shadow rounded-3">
         <div class="food-landing">
             <div class="landing-bg"></div>
             
@@ -203,7 +203,7 @@
         <div class="row">hi</div> -->
     <!-- </div> -->
 <!-- Auto layout column -->
-<div id="maindiv" class="container-fluid shadow rounded-3 mt-5">
+<div id="maindiv" class="container-fluid shadow rounded-3 ">
 
     <div class="row shadow rounded">
                 <div class="col-sm-12 col-md-6">
@@ -414,7 +414,7 @@
 </div>
 
  -->
- <div class="container bg-light pt-3">
+ <div id="carditem" class="container bg-light pt-3 shadow rounded-3">
  <div class="row">
             <h2 class="text-success"><i>Today's Special...</i></h2>
 </div>
