--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Toggler for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon btn btn-primary"></span>
         </button>
 
         <!-- Navbar Links -->
@@ -203,7 +203,7 @@
         <div class="row">hi</div> -->
     <!-- </div> -->
 <!-- Auto layout column -->
-<div id="maindiv" class="container-fluid shadow rounded-3 ">
+<div id="maindiv" class="container shadow rounded-3 ">
 
     <div class="row shadow rounded">
                 <div class="col-sm-12 col-md-6">
